# wakeword-data

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json  dockerfile
.github/workflows/: main.yaml
tests/: test__main__.py  test_create.py
tests/schemas/: wakeword.json
wakeword_training_record/: __main__.py  create.py
